examples/traefik/examples/path-prefix.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rex
  labels:
    app: rex
spec:
  containers:
  - name: rex
    image: registry.k8s.io/e2e-test-images/agnhost:2.40
    args:
      - netexec
      - --http-port=8123
      - --udp-port=-1
    ports:
      - containerPort: 8123
  dnsConfig:
    nameservers:
    - 1.1.1.1
    searches:
    - resolv.conf.local
  dnsPolicy: None
---
apiVersion: v1
kind: Pod
metadata:
  name: buzz
  labels:
    app: buzz
spec:
  containers:
  - name: rex
    image: registry.k8s.io/e2e-test-images/agnhost:2.40
    args:
      - netexec
      - --http-port=8321
      - --udp-port=-1
    ports:
      - containerPort: 8321
  dnsConfig:
    nameservers:
    - 1.1.1.1
    searches:
    - resolv.conf.local
  dnsPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: rex
spec:
  type: NodePort
  ports:
  - port: 8123
    nodePort: 30123
  selector:
    app: rex
---
apiVersion: v1
kind: Service
metadata:
  name: buzz
spec:
  type: NodePort
  ports:
  - port: 8321
    nodePort: 30321
  selector:
    app: buzz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rex
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /rex*
            pathType: Prefix
            backend:
              service:
                name:  rex
                port:
                  number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buzz
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /buzz
            pathType: Prefix
            backend:
              service:
                name:  buzz
                port:
                  number: 8321
